--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
+server.port=8090
+server.servlet.context-path=/shiro
+spring.application.name=shiro
+
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
+
+
+
+
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/yami_shops
+spring.datasource.url=jdbc:mysql://localhost:3306/liurenliang
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
